--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^4.6.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "@angular/fire": "^6.1.4",
+    "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -40,6 +42,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "firebase-tools": "^9.2.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
